[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "LiteJsonDb"
authors = [
    {name = "Coding Team", email = "codingteamgroup@gmail.com"}
]
description = "A lightweight JSON-based database system. It's designed for simplicity and ease of use."
version = "3.5.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cryptography"
]

[tool.setuptools]
include-package-data = true